--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<!--
+File: app.component.html
+Author: Tóth Júlia
+Copyright: 2022, Tóth Júlia
+Group: Szoft 2/n
+Date: 2022-11-23
+Github: https://github.com/haribomaci
+Licenc: GNU GPL
+-->
 <div class="container">
   <h1>{{title}}</h1>
   <!--Területszámítás
